@@ -50,6 +50,7 @@
         <!-- make the install xpi2p -->
         <copy file="scripts/i2ptunnel.config" todir="plugin/" overwrite="true" />
         <copy file="scripts/plugin.config" todir="plugin/" overwrite="true" />
+        <copy file="scripts/zzzot.config" todir="plugin/" overwrite="true" />
         <exec executable="echo" osfamily="unix" failonerror="true" output="plugin/plugin.config" append="true">
             <arg value="version=${release.number}-b${build.number}" />
         </exec>
