@@ -1,0 +1,3 @@
+# announce interval in seconds
+# minimum 900 (15 minutes), maximum 21600 (6 hours)
+interval=1620
